[tool.poetry]
name = "csv_io"
version = "0.1.0"
description = ""
authors = ["mokkan <shun8.ig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.2"
openpyxl = "^3.0.6"
PyYAML = "^5.4.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
